tests/paczka1/fuzzy1/60042815.err
Error in line 4: Xfmi S946 73,5
Error in line 7: XGcDLzrXpd S946 191,0
Error in line 11: XGcDLzrXpd S84 38,1
Error in line 22: XGcDLzrXpd S946 80,3
Error in line 30: S861 S946 95,1
Error in line 28: xaiFa5Z8Wv S216 163,6
